--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,11 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.derpgroup.dndchargen</groupId>
   <artifactId>dndchargen-project</artifactId>
-  <version>0.0.2-SNAPSHOT</version>
+  <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>DNDCharacterGenerator</name>
 
   <modules>
-    <module>voice-interface</module>
     <module>service</module>
   </modules>
 
@@ -44,8 +43,8 @@
   </licenses>
 
   <organization>
-    <name>DERP Group</name>
-    <url>http://derpgroup.com</url>
+    <name>3PO-Labs</name>
+    <url>http://www.3PO-Labs.com</url>
   </organization>
 
   <developers>
@@ -57,42 +56,9 @@
       <id>galactoise</id>
       <name>Eric Olson</name>
     </developer>
-    <developer>
-      <id>r-gerard</id>
-      <name>Rusty Gerard</name>
-    </developer>
-    <developer>
-      <id>paulwinters</id>
-      <name>Paul Winters</name>
-    </developer>
   </developers>
 
   <dependencies>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>2.4</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.3.2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.checkerframework</groupId>
-      <artifactId>checker</artifactId>
-      <version>1.9.6</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.9.5</version>
-      <scope>test</scope>
-    </dependency>
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
