--- a/service/pom.xml
+++ b/service/pom.xml
@@ -3,11 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.derpgroup.dndchargen</groupId>
-		<artifactId>dndchargen-project</artifactId>
+		<groupId>com.derpgroup.rpgchargen</groupId>
+		<artifactId>rpgchargen-project</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>dndchargen-service</artifactId>
+	<artifactId>rpgchargen-service</artifactId>
 	<packaging>jar</packaging>
 
 	<properties>
